--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,11 @@
 :root {
 	--nav-height: 50px;
 	--tab-height: 38px;
-	--radius: 5px;
+	--main-radius: 5px;
+	--small-radius: 4px;
 	--padding: 30px;
 	--code-box-margin: 10px;
+	--tab-button-dimension: 26px;
 }
 
 
@@ -29,7 +31,13 @@ body:before {
 	z-index: 0;
 }
 
-input[type="radio"] {display: none;}
+body, button, input {font-family: 'Heebo', sans-serif;}
+
+input {display: none;}
+button {
+	padding: 0;
+	outline: 0;
+}
 
 
 
@@ -41,18 +49,18 @@ input[type="radio"] {display: none;}
 	justify-content: space-between;
 	height: var(--nav-height);
 	width: 100%;
-	background-color: #1F2430;
-	font-family: 'San Francisco', sans-serif;
-	font-weight: 500;
 	font-size: 16px;
+	padding: 0 10px;
+	background-color: #1F2430;
+	box-sizing: border-box;
 	z-index: 9999;
 }
 
 .logo {
 	font-family: 'Fira Sans', sans-serif;
 	font-size: 30px;
-	font-weight: italic;
-	margin-left: 15px;
+	font-weight: 800;
+	font-style: italic;
 	background: -webkit-linear-gradient(-45deg, #f745b4, #fcb74c);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
@@ -68,72 +76,18 @@ input[type="radio"] {display: none;}
 .button {
 	height: 26px;
 	min-width: 90px;
-	font-family: 'San Francisco', sans-serif;
-	font-weight: 500;
-	font-size: 16px;
+	font-size: 15px;
 	padding: 0 15px;
 	margin: 0 4px;
 	color: white;
 	background: rgb(107, 179, 250);
 	background: linear-gradient(180deg, #53A5FB 0%, rgba(6,125,255,1) 100%);
 	border: 0;
-	border-radius: 4px;
-	outline: 0;
+	border-radius: var(--small-radius);
 	cursor: pointer;
 	box-sizing: border-box;
 }
-.button:active {
-	background: linear-gradient(0deg, #53A5FB 0%, rgba(6, 125, 255, 1) 100%);
-}
-
-.layout-container {
-	position: relative;
-	margin-right: 15px;
-}
-
-.layout-select {
-	height: 35px;
-	font-family: 'San Francisco', sans-serif;
-	font-weight: 500;
-	font-size: 14px;
-	padding: 0 12px;
-	color: white;
-	background: transparent;
-	border: 2px solid #fff4;
-	border-radius: var(--radius);
-	outline: 0;
-	cursor: pointer;
-	box-sizing: border-box;
-}
-.layout-select:hover {background: #fff1;}
-
-.layout-options {
-	position: absolute;
-	right: 0;
-	display: none;
-	flex-direction: column;
-	padding: 10px;
-	margin-top: 5px;
-	background: white;
-	border-radius: var(--radius);
-	box-shadow: 0 0 25px rgba(0,0,0,0.3);
-}
-.flex {display: flex;}
-
-.layout {
-	display: flex;
-	align-items: center;
-	opacity: 0.5;
-	font-size: 14px;
-	padding: 8px;
-	border-radius: 3px;
-	cursor: pointer;
-}
-.layout:hover {opacity: 1;}
-input[type="radio"]:checked + .layout {
-	opacity: 1;
-	background: #eee;
-}
+.button:active {background: linear-gradient(0deg, #53A5FB 0%, rgba(6, 125, 255, 1) 100%);}
 
 
 
@@ -142,8 +96,8 @@ input[type="radio"]:checked + .layout {
 	height: calc(100% - var(--tab-height));
 	font-family: 'Fira Code', monospace;
 	font-size: 14px;
-	border-bottom-left-radius: var(--radius);
-	border-bottom-right-radius: var(--radius);
+	border-bottom-left-radius: var(--main-radius);
+	border-bottom-right-radius: var(--main-radius);
 }
 
 .CodeMirror *::-webkit-scrollbar {
@@ -152,13 +106,13 @@ input[type="radio"]:checked + .layout {
 	background: transparent;
 }
 
-.CodeMirror *::-webkit-scrollbar-corner {background: transparent;}
-
 .CodeMirror *::-webkit-scrollbar-thumb {
 	background: #fff2;
 	border-radius: 999px;
 }
 .CodeMirror *::-webkit-scrollbar-thumb:hover {background: #fff3;}
+
+.CodeMirror-scrollbar-filler {background: transparent;}
 
 
 
@@ -195,14 +149,14 @@ input[type="radio"]:checked + .layout {
 }
 
 .code-box {
-	border-radius: var(--radius);
+	border-radius: var(--main-radius);
 	box-shadow: 0 0 25px rgba(0,0,0,0.3);
 }
 
 .result-container {
 	height: 100%;
 	width: 100%;
-	border-radius: var(--radius);
+	border-radius: var(--main-radius);
 	box-shadow: 0 0 25px rgba(0,0,0,0.3);
 	transition: all 0.5s;
 }
@@ -211,8 +165,8 @@ input[type="radio"]:checked + .layout {
 	height: calc(100% - var(--tab-height));
 	width: 100%;
 	border: none;
-	border-bottom-left-radius: var(--radius);
-	border-bottom-right-radius: var(--radius);
+	border-bottom-left-radius: var(--main-radius);
+	border-bottom-right-radius: var(--main-radius);
 	background-color: white;
 }
 
@@ -224,131 +178,131 @@ input[type="radio"]:checked + .layout {
 	align-items: center;
 	height: var(--tab-height);
 	width: 100%;
-	font-family: 'San Francisco', sans-serif;
-	font-weight: 400;
-	margin: 0;
+	color: grey;
 	background: hsl(300, 1%, 81%);
 	background: linear-gradient(to top, hsl(300, 3%, 82%), hsl(300, 7%, 91%));
-	border-top-left-radius: var(--radius);
-	border-top-right-radius: var(--radius);
+	border-top-left-radius: var(--main-radius);
+	border-top-right-radius: var(--main-radius);
 	box-sizing: border-box;
 	overflow: hidden;
 }
 
-.circle-container {
-	display: flex;
-	justify-content: space-between;
-	min-width: 52px;
-	margin-left: 12px;
+.tab > img {
+	height: 20px;
+	margin: 0 8px;
+	user-select: none;
 }
-
-.circle {
-	--circle-dimension: 13px;
-	height: var(--circle-dimension);
-	width: var(--circle-dimension);
-	border-radius: 999px;
-}
-.circle:nth-child(1) {background-color: #F75F5A;}
-.circle:nth-child(2) {background-color: #FABC43;}
-.circle:nth-child(3) {background-color: #37C34A;}
 
 .tab-title {
-	font-size: 16px;
-	font-weight: 500;
-	margin-left: 10px;
-	color: grey;
+	font-size: 15px;
+	user-select: none;
 }
+.no-icon-title {margin-left: 15px;}
 
-
-
-/* Toggles */
-.resize-toggle-container {
-	--resize-dimension: 28px;
-	margin-left: auto;
-	margin-right: calc((var(--tab-height) - var(--resize-dimension))/2);
-}
-
-.resize-toggle {
-	float: left;
+.config-button {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	height: var(--resize-dimension);
-	width: var(--resize-dimension);
+	height: var(--tab-button-dimension);
+	width: var(--tab-button-dimension);
 	font-size: 17px;
-	font-weight: 400;
-	margin-left: 4px;
-	border-radius: 4px;
+	padding: 0;
+	margin-left: auto;
+	margin-right: calc((var(--tab-height) - var(--tab-button-dimension))/2);
+	border: 0;
+	border-radius: var(--small-radius);
 	box-shadow: 0 0 4px rgba(0,0,0,0.15);
+	background: white;
+	cursor: pointer;
+}
+.config-button > img {
+	height: 15px;
+	user-select: none;
+}
+.config-button:active > img {filter: invert();}
+
+.resize-toggle-container {
+	display: flex;
+	margin-left: auto;
+	margin-right: calc((var(--tab-height) - var(--tab-button-dimension))/2);
+	border-radius: var(--small-radius);
+	box-shadow: 0 0 4px rgba(0,0,0,0.15);
+	overflow: hidden;
+}
+
+.resize-toggle {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: var(--tab-button-dimension);
+	width: calc(var(--tab-button-dimension) + 2px);
+	font-size: 17px;
+	border: 0;
 	color: black;
 	background: white;
 	cursor: pointer;
 }
 
-.head-toggle {
-	--toggle-height: 24px;
-	height: var(--toggle-height);
-	font-family: 'Fira Code', monospace;
-	font-size: 13px;
-	font-weight: 500;
-	padding: 0 8px;
-	margin-left: auto;
-	margin-right: calc((var(--tab-height) - var(--toggle-height))/2);
-	border: 0;
-	border-radius: 4px;
-	outline: 0;
-	box-shadow: 0 0 4px rgba(0,0,0,0.15);
-	color: #666;
-	background: white;
-	box-sizing: border-box;
-	cursor: pointer;
+.resize-toggle > img {
+	height: 18px;
+	user-select: none;
 }
 
-input[type="radio"]:checked + .resize-toggle, .resize-toggle:active, .head-toggle:active {
+.config-button:active {
 	color: white;
 	background-color: #888;
 }
+input[type="radio"]:checked + .resize-toggle, .tab-button:active {background-color: #888;}
+input[type="radio"]:checked + .resize-toggle > img {filter: invert();}
 
 
 
-/* Head */
-.head {
+/* HTML Config */
+.html-config {
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	display: none;
 	width: 550px;
 	background: #f8f8f8;
-	border-radius: var(--radius);
+	border-radius: var(--main-radius);
 	box-shadow: 0 0 20px rgba(0,0,0,0.4);
 	transform: translate(-50%, -50%);
 	z-index: 9999;
 }
 
-.head-content {
+.config-content {
 	display: flex;
 	flex-direction: column;
 	height: 100%;
 	width: 100%;
 	padding: 20px;
-	border-bottom-left-radius: var(--radius);
-	border-bottom-right-radius: var(--radius);
+	background: #777;
 	box-sizing: border-box;
 }
 
-.head .CodeMirror {
-	height: 150px;
+.config-content > span {
+	font-size: 15px;
+	font-weight: 400;
+	margin-bottom: 5px;
+	color: white;
+}
+
+.config-bottom {
+	display: flex;
+	align-items: center;
+	height: 50px;
+	width: 100%;
+}
+
+.html-config .CodeMirror {
+	height: 100px;
 	font-size: 12px;
-	border-radius: 2px;
-	border: 1px solid #aaa;
+	border-radius: var(--small-radius);
 	box-sizing: border-box;
 }
 
-.head .CodeMirror *::-webkit-scrollbar-thumb {background: #0002;}
-.head .CodeMirror *::-webkit-scrollbar-thumb:hover {background: #0003;}
-
-.save-and-close {
+.save-close {
 	margin: 0;
 	margin-left: auto;
-	margin-top: 10px;
 }
