--- a/css/animations.css
+++ b/css/animations.css
@@ -1,6 +1,13 @@
+:root {
+	--animation-speed: 0.7s;
+	--initial-delay: 0.4s;
+}
+
+
+
+/* Actual animations */
 @keyframes fadeDown {
-	0% {opacity: 0;}
-	50% {
+	0% {
 		opacity: 0;
 		transform: translateY(-80px);
 	}
@@ -11,8 +18,7 @@
 }
 
 @keyframes fadeUp {
-	0% {opacity: 0;}
-	50% {
+	0% {
 		opacity: 0;
 		transform: translateY(80px);
 	}
@@ -24,35 +30,58 @@
 
 @keyframes fadeIn {
 	0% {opacity: 0;}
-	50% {opacity: 0;}
 	100% {opacity: 1;}
 }
 
 
 
+/* General */
 .nav {
-	animation: fadeDown 1.5s forwards;
-	animation-delay: 0.3s;
+	animation: fadeDown var(--animation-speed) forwards;
+	animation-delay: var(--initial-delay);
 	opacity: 0;
 }
+
+
+
+/* Tri Editor */
+.code-box {
+	animation: fadeUp var(--animation-speed) forwards;
+	opacity: 0;
+}
+.html {animation-delay: calc(var(--initial-delay) + 0.6s);}
+.css {animation-delay: calc(var(--initial-delay) + 0.8s);}
+.js {animation-delay: calc(var(--initial-delay) + 1.0s);}
 
 .result-container {
-	animation: fadeUp 1.3s forwards;
-	animation-delay: 1.8s;
+	animation: fadeUp var(--animation-speed) forwards;
+	animation-delay: calc(var(--initial-delay) + 1.2s);
 	opacity: 0;
 }
 
-.gutter-horizontal {
-	animation: fadeIn 1.3s forwards;
-	animation-delay: 1.8s;
+.tri-editor > .gutter-horizontal {
+	animation: fadeIn var(--animation-speed) forwards;
+	animation-delay: calc(var(--initial-delay) + 1.4s);
 	opacity: 0;
 }
 
-.code-box {
-	animation: fadeUp 1.3s forwards;
-	animation-delay: 0.6s;
+
+
+/* JS Editor */
+.js-box {
+	animation: fadeUp var(--animation-speed) forwards;
+	animation-delay: calc(var(--initial-delay) + 0.4s);
 	opacity: 0;
 }
-.html {animation-delay: 1s;}
-.css {animation-delay: 1.2s;}
-.js {animation-delay: 1.4s;}
+
+.console-container {
+	animation: fadeUp var(--animation-speed) forwards;
+	animation-delay: calc(var(--initial-delay) + 0.6s);
+	opacity: 0;
+}
+
+.js-editor > .gutter-horizontal {
+	animation: fadeIn var(--animation-speed) forwards;
+	animation-delay: calc(var(--initial-delay) + 0.8s);
+	opacity: 0;
+}
