--- a/css/settings.css
+++ b/css/settings.css
@@ -11,9 +11,9 @@
 	background: white;
 	border-radius: var(--main-radius);
 	box-shadow: 0 0 25px rgba(0,0,0,0.3);
-	z-index: 9999;
+	z-index: 999;
 }
-.flex {display: flex;}
+.settings-show {display: flex;}
 
 .options {display: flex;}
 
@@ -21,22 +21,6 @@
 	height: 2px;
 	width: 100%;
 	margin: 10px 0;
-	background: #eee;
-}
-
-.layout {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: calc(100%/3);
-	padding: 10px 0;
-	border-radius: var(--small-radius);
-	opacity: 0.5;
-	cursor: pointer;
-}
-.layout:hover {opacity: 1;}
-input[type="radio"]:checked + .layout {
-	opacity: 1;
 	background: #eee;
 }
 
